kano-peripherals (3.14.0-0) unstable; urgency=low

  * Changed battery detection on boot, to work with new splash animation

 -- Team Kano <dev@kano.me>  Tue, 28 Nov 2017 15:36:22 +0100

kano-peripherals (3.13.0-0) unstable; urgency=low

  * Added functionality to detect CKCs, CKC v1, CKC v1.1
  * Hidden RC from turn-off-hat-leds service, fire and forget

 -- Team Kano <dev@kano.me>  Fri, 28 Sep 2017 18:36:45 +0100

kano-peripherals (3.11.0-0) unstable; urgency=low

  * Add support for poweroff on boot if battery is low
  * Refactored DBus services architecture with DeviceDiscovery
  * Added support for board hotplugging live
  * Supporting board hotplugging in CPU monitor animation
  * Added support for LED Speaker back
  * Various fixes to library controlling PiHat and PowerHat
  * Systemd unit file to turn off PiHat and LED Speaker lights

 -- Team Kano <dev@kano.me>  Mon, 17 May 2017 17:56:45 +0100

kano-peripherals (3.10.0-0) unstable; urgency=low

  * Add support for the new Kano Pi Hat

 -- Team Kano <dev@kano.me>  Wed, 15 Mar 2017 12:00:00 +0000

kano-peripherals (3.4.0-0) unstable; urgency=low

  * Added is_speaker_plugged api to daemon

 -- Team Kano <dev@kano.me>  Mon, 11 Jan 2016 12:00:00 +0000

kano-peripherals (2.3.0-0) unstable; urgency=low

  * Added LED Speaker daemon.

 -- Team Kano <dev@kano.me>  Mon, 11 Jan 2016 12:00:00 +0000

kano-peripherals (2.1-1) unstable; urgency=low

  * Initial release.

 -- Team Kano <dev@kano.me>  Thu, 10 Sep 2015 12:00:00 +0000