@@ -16,8 +16,6 @@ import dbus
 import dbus.service
 from multiprocessing import Process, Value
 
-from gi.repository import GObject
-
 from kano.logging import logger
 from kano.utils import run_bg
 
@@ -75,6 +73,9 @@ class PiHatService(BaseDeviceService):
         )
         self.power_button_thread.start()
 
+        # Lazy import to avoid issue of importing from this module externally.
+        from gi.repository import GObject
+
         # Start the detection polling routine.
         GObject.threads_init()
         self.detect_thread_id = GObject.timeout_add(
@@ -87,6 +88,10 @@ class PiHatService(BaseDeviceService):
         """
         Stop all running (sub)processes and clean up before process termination.
         """
+
+        # Lazy import to avoid issue of importing from this module externally.
+        from gi.repository import GObject
+
         GObject.source_remove(self.detect_thread_id)
         self.power_button_thread.terminate()
 
