@@ -1,8 +1,9 @@
 kano-peripherals (3.14.0-0) unstable; urgency=low
 
   * Changed battery detection on boot, to work with new splash animation
+  * Fixed traceback when importing from wrappers (fixes audio)
 
- -- Team Kano <dev@kano.me>  Tue, 28 Nov 2017 15:36:22 +0100
+ -- Team Kano <dev@kano.me>  Thu, 30 Nov 2017 19:39:22 +0100
 
 kano-peripherals (3.13.0-0) unstable; urgency=low
 
